--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.3",
     "express-handlebars": "^6.0.5",
     "morgan": "^1.10.0",
+    "multer": "^1.4.4",
     "mysql": "^2.18.1",
     "mysql-server": "^0.0.5",
     "nodemon": "^2.0.15",
